chart/templates/pod-init.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook-weight: "-1"
  name: gogs-postgresql-init
  labels:
    app: gogs-init
spec:
  restartPolicy: OnFailure
  containers:
  - name: postgresql
    command: ["sh", "-c", "chown 26 /data"]
    image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
    volumeMounts:
    - mountPath: /data
      name: gogs-postgres-data     
  volumes:
  - name: gogs-postgres-data
    persistentVolumeClaim:
      claimName: gogs-postgres-data
