chart/templates/service-postgres.yaml
kind: Service
apiVersion: v1
metadata:
  name: gogs-postgresql
  labels:
    app: gogs
spec:
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
  selector:
    name: gogs-postgresql
    app: gogs
